Removed main.html and moved planet.html to /

--- a/templates/header.html
+++ b/templates/header.html
@@ -36,7 +36,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/planet/">Planet inspector</a>
+                    <a class="nav-link" href="/">Planet inspector</a>
                 </li>
             </ul>
 
